--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@
   .table td {
     padding: 10px;
     border: 1px solid #e7e7e7;
-    text-align: left;
+    text-align: center !important;
     font-size: 14px;
   }
   
